@@ -1,3 +1,10 @@
+2011-03-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/graph/view3D/spadAction3d.c,
+	src/graph/include/actions.h
+	src/graph/viewman/fun3D.c: Implement getting/setting
+	viewpoint.
+
 2011-03-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/tex.spad.pamphlet,
